# kit

./: .gitignore  CHANGELOG.md  KitSpec  README  README.md  Tests.hs  build_dstroot.sh  build_pkg.sh  index.html  kit-ws.lkshw  kit.cabal  main.hs
Kit/: AbsolutePath.hs  Client.hs  Cmd.hs  CmdArgs.hs  Commands.hs  Contents.hs  Dependency.hs  FilePath.hs  FlaggedFile.hs  FlaggedFilePath.hs  JSON.hs  Kit.hs  Main.hs  Model.hs  Package.hs  Project.hs  Repository.hs  Spec.hs  Util.hs  Verify.hs  WorkingCopy.hs  log.txt
Kit/Util/: FSAction.hs  IsObject.hs
Kit/XCode/: Builder.hs  Common.hs  OldPList.hs  PBXProject.hs  Prefix.hs  ProjectFile.hs  ProjectFileTemplate.hs  XCConfig.hs  log.txt
Kit/XCode/Experimental/: ProjectBuilder.hs
Kit/Xcode/: Builder.hs  Common.hs  ProjectFileTemplate.hs  XCConfig.hs
Kit/Xcode2/: Builder.hs  ProjectFileTemplate.hs
Kit/Xcode2/Experimental/: ProjectBuilder.hs
Text/: PList.hs
Text/PList/: PrettyPrint.hs
design/: one.md
etc/kit.pmdoc/: 01dstroot-contents.xml  01dstroot.xml  index.xml
prototype/: KitSpec
prototype/KitDeps/KitDeps.xcodeproj/: nkpart.perspectivev3  project.pbxproj
prototype/KitDeps/KitDepsCustom.xcodeproj/: nkpart.perspectivev3  project.pbxproj
prototype/KitDeps/kits/motive-0.1/src/: motive.m
prototype/raw-kits/functionalkit/: KitSpec
prototype/raw-kits/functionalkit/src/: FK.h
prototype/raw-kits/functionalkit/tmp/functionalkit-0.1/: KitSpec
prototype/raw-kits/functionalkit/tmp/functionalkit-0.1/src/: FK.m
prototype/raw-kits/motive/src/: motive.h
prototype/server/kits/functionalkit/0.1/: KitSpec
prototype/server/kits/motive/0.1/: KitSpec
prototype/server/kits/phoenix/0.1/: KitSpec
site/: about.html  commands.html  kit.css  project-spec.html  using.html
tests/custom-everything/: KitSpec  my_config.xcconfig
tests/static-libs/: run.sh
tests/static-libs/the-dep/: KitSpec
tests/static-libs/the-dep/Classes/: foo.h  foo.m
tests/static-libs/the-project/: KitSpec  MainWindow.xib  RootViewController.xib  TheProject_Prefix.pch  main.m
tests/static-libs/the-project/Classes/: RootViewController.h  RootViewController.m  TheProjectAppDelegate.h  TheProjectAppDelegate.m
tests/static-libs/the-project/Kits2/: Kit.xcconfig  Makefile
tests/static-libs/the-project/Kits2/KitDeps.xcodeproj/: project.pbxproj
tests/static-libs/the-project/TheProject.xcodeproj/: project.pbxproj
