name:           kit
version:        0.7.7
cabal-version:  >=1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
maintainer:     nkpart@gmail.com
homepage:       http://github.com/nkpart/kit
synopsis:       A dependency manager for Xcode (Objective-C) projects
description:    A dependency manager for Xcode (Objective-C) projects
category:       Development
author:         Nick Partridge

Executable kit
  main-is:        Main.hs
  buildable:      True
  build-depends:  process -any, network -any, mtl >= 2.0 && < 3, 
                  filepath -any, directory -any, containers -any, cmdargs >= 0.6.2,
                  bytestring -any, base >=3 && <5,
                  HTTP >=4000.0.9, Glob >= 0.5.1 && < 6, data-object -any, data-object-yaml -any,
                  unix >= 2.4 && < 2.5, ansi-terminal >= 0.5.5

  hs-source-dirs: .
  other-modules:  Kit.Spec Kit.Main Kit.Package Kit.Project Kit.Repository Kit.Util Kit.Xcode.Builder
                  Kit.Xcode.Common Kit.Xcode.ProjectFileTemplate Kit.Xcode.XCConfig Text.PList
                  Kit.Contents Kit.Commands Kit.CmdArgs Kit.Util.IsObject Kit.Util.FSAction Kit.WorkingCopy
                  Kit.Dependency
  Ghc-options:    -Wall

source-repository head
  type: git
  location: git://github.com/nkpart/kit.git
  
