name:           kit
version:        0.7.8
cabal-version:  >=1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
maintainer:     nkpart@gmail.com
homepage:       http://github.com/nkpart/kit
synopsis:       A dependency manager for Xcode (Objective-C) projects
description:    A dependency manager for Xcode (Objective-C) projects
category:       Development
author:         Nick Partridge

Executable kit
  main-is:        Main.hs
  buildable:      True
  build-depends:  base >=3 && <5,
                  Glob >= 0.5.1 && < 6, 
                  HTTP >=4000.0.9, 
                  ansi-terminal >= 0.5.5,
                  bytestring -any, 
                  cabal-file-th >= 0.1,
                  cmdargs >= 0.6.2,
                  containers -any, 
                  data-object -any, 
                  data-object-yaml -any,
                  directory -any, 
                  filepath -any, 
                  mtl >= 2.0 && < 3, 
                  network -any, 
                  process -any,
                  template-haskell,
                  unix >= 2.4 && < 2.5

  hs-source-dirs: .
  other-modules:  Kit.Spec Kit.Main Kit.Package Kit.Project Kit.Repository Kit.Util Kit.Xcode.Builder
                  Kit.Xcode.Common Kit.Xcode.ProjectFileTemplate Kit.Xcode.XCConfig Text.PList
                  Kit.Contents Kit.Commands Kit.CmdArgs Kit.Util.IsObject Kit.Util.FSAction Kit.WorkingCopy
                  Kit.Dependency
  Ghc-options:    -Wall

source-repository head
  type: git
  location: git://github.com/nkpart/kit.git
  
