name:           kit
version:        0.7.11
cabal-version:  >=1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
maintainer:     nkpart@gmail.com
homepage:       http://github.com/nkpart/kit
synopsis:       A dependency manager for Xcode (Objective-C) projects
description:    A dependency manager for Xcode (Objective-C) projects
category:       Development
author:         Nick Partridge

Executable kit
  main-is:        Main.hs
  buildable:      True
  build-depends:  base >=3 && <5,
                  Glob >= 0.7.1, 
                  attoparsec,
                  ansi-terminal >= 0.5.5,
                  cabal-file-th >= 0.2.2,
                  cmdargs >= 0.9.6,
                  containers -any, 
                  errors >= 1.3.1,
                  yaml,
                  directory -any, 
                  filepath -any, 
                  mtl -any,
                  process -any,
                  unordered-containers,
                  text,
                  unix

  hs-source-dirs: .
  other-modules:  Kit.Spec Kit.Main Kit.Package Kit.Project Kit.Repository Kit.Util Kit.Xcode.Builder
                  Kit.Xcode.Common Kit.Xcode.ProjectFileTemplate Kit.Xcode.XCConfig Text.PList Text.PList.PrettyPrint
                  Kit.Contents Kit.Commands Kit.CmdArgs Kit.Util.FSAction Kit.WorkingCopy Kit.AbsolutePath
                  Kit.Dependency Kit.FlaggedFile
  Ghc-options:    -Wall

source-repository head
  type: git
  location: git://github.com/nkpart/kit.git
  
